load("@io_bazel_rules_go//go:def.bzl", "go_test")

go_test(
    name = "benchmark_test",
    srcs = [
        "benchmark_suite_test.go",
        "benchmark_test.go",
    ],
    deps = [
        "@com_github_lucas_clemente_quic_go//:go_default_library",
        "@com_github_lucas_clemente_quic_go//internal/protocol:go_default_library",
        "@com_github_lucas_clemente_quic_go//internal/testdata:go_default_library",
        "@com_github_onsi_ginkgo//:go_default_library",
        "@com_github_onsi_gomega//:go_default_library",
    ],
)

go_test(
    name = "go_default_test",
    srcs = [
        "benchmark_suite_test.go",
        "benchmark_test.go",
    ],
    deps = [
        "//:go_default_library",
        "//internal/protocol:go_default_library",
        "//internal/testdata:go_default_library",
        "@com_github_onsi_ginkgo//:go_default_library",
        "@com_github_onsi_gomega//:go_default_library",
    ],
)
