load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = [
        "io.go",
        "varint.go",
    ],
    importpath = "github.com/lucas-clemente/quic-go/quicvarint",
    visibility = ["//visibility:public"],
    deps = ["//internal/protocol:go_default_library"],
)

go_test(
    name = "go_default_test",
    srcs = [
        "io_test.go",
        "quicvarint_suite_test.go",
        "varint_test.go",
    ],
    embed = [":go_default_library"],
    deps = [
        "@com_github_onsi_ginkgo//:go_default_library",
        "@com_github_onsi_gomega//:go_default_library",
    ],
)
