load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["echo.go"],
    importpath = "github.com/lucas-clemente/quic-go/example/echo",
    visibility = ["//visibility:private"],
    deps = ["//:go_default_library"],
)

go_binary(
    name = "echo",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)
