load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["fuzz.go"],
    importpath = "github.com/lucas-clemente/quic-go/fuzzing/handshake",
    visibility = ["//visibility:public"],
    deps = [
        "//fuzzing/internal/helper:go_default_library",
        "//internal/handshake:go_default_library",
        "//internal/protocol:go_default_library",
        "//internal/utils:go_default_library",
        "//internal/wire:go_default_library",
    ],
)
