load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["main.go"],
    importpath = "github.com/lucas-clemente/quic-go/integrationtests/gomodvendor",
    visibility = ["//visibility:private"],
    deps = ["//http3:go_default_library"],
)

go_binary(
    name = "gomodvendor",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)
