load("@io_bazel_rules_go//go:def.bzl", "go_test")

go_test(
    name = "self_test",
    srcs = [
        "cancelation_test.go",
        "conn_id_test.go",
        "datagram_test.go",
        "deadline_test.go",
        "drop_test.go",
        "early_data_test.go",
        "handshake_drop_test.go",
        "handshake_rtt_test.go",
        "handshake_test.go",
        "http_test.go",
        "key_update_test.go",
        "mitm_test.go",
        "multiplex_test.go",
        "packetization_test.go",
        "resumption_test.go",
        "rtt_test.go",
        "self_suite_test.go",
        "stateless_reset_test.go",
        "stream_test.go",
        "timeout_test.go",
        "tracer_test.go",
        "uni_stream_test.go",
        "zero_rtt_test.go",
    ],
    deps = [
        "@com_github_lucas_clemente_quic_go//:go_default_library",
        "@com_github_lucas_clemente_quic_go//http3:go_default_library",
        "@com_github_lucas_clemente_quic_go//integrationtests/tools/israce:go_default_library",
        "@com_github_lucas_clemente_quic_go//integrationtests/tools/proxy:go_default_library",
        "@com_github_lucas_clemente_quic_go//internal/handshake:go_default_library",
        "@com_github_lucas_clemente_quic_go//internal/protocol:go_default_library",
        "@com_github_lucas_clemente_quic_go//internal/testdata:go_default_library",
        "@com_github_lucas_clemente_quic_go//internal/testutils:go_default_library",
        "@com_github_lucas_clemente_quic_go//internal/utils:go_default_library",
        "@com_github_lucas_clemente_quic_go//internal/wire:go_default_library",
        "@com_github_lucas_clemente_quic_go//logging:go_default_library",
        "@com_github_lucas_clemente_quic_go//qlog:go_default_library",
        "@com_github_onsi_ginkgo//:go_default_library",
        "@com_github_onsi_ginkgo//extensions/table:go_default_library",
        "@com_github_onsi_gomega//:go_default_library",
        "@com_github_onsi_gomega//gbytes:go_default_library",
    ],
)

go_test(
    name = "go_default_test",
    srcs = [
        "cancelation_test.go",
        "conn_id_test.go",
        "datagram_test.go",
        "deadline_test.go",
        "drop_test.go",
        "early_data_test.go",
        "handshake_drop_test.go",
        "handshake_rtt_test.go",
        "handshake_test.go",
        "http_test.go",
        "key_update_test.go",
        "mitm_test.go",
        "multiplex_test.go",
        "packetization_test.go",
        "resumption_test.go",
        "rtt_test.go",
        "self_suite_test.go",
        "stateless_reset_test.go",
        "stream_test.go",
        "timeout_test.go",
        "tracer_test.go",
        "uni_stream_test.go",
        "zero_rtt_test.go",
    ],
    deps = [
        "//:go_default_library",
        "//http3:go_default_library",
        "//integrationtests/tools/israce:go_default_library",
        "//integrationtests/tools/proxy:go_default_library",
        "//internal/handshake:go_default_library",
        "//internal/protocol:go_default_library",
        "//internal/testdata:go_default_library",
        "//internal/testutils:go_default_library",
        "//internal/utils:go_default_library",
        "//internal/wire:go_default_library",
        "//logging:go_default_library",
        "//qlog:go_default_library",
        "@com_github_onsi_ginkgo//:go_default_library",
        "@com_github_onsi_ginkgo//extensions/table:go_default_library",
        "@com_github_onsi_gomega//:go_default_library",
        "@com_github_onsi_gomega//gbytes:go_default_library",
    ],
)
