load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = [
        "ack_eliciting.go",
        "ackhandler.go",
        "frame.go",
        "gen.go",
        "interfaces.go",
        "mockgen.go",
        "packet_linkedlist.go",
        "packet_number_generator.go",
        "received_packet_handler.go",
        "received_packet_history.go",
        "received_packet_tracker.go",
        "send_mode.go",
        "sent_packet_handler.go",
        "sent_packet_history.go",
    ],
    importpath = "github.com/lucas-clemente/quic-go/internal/ackhandler",
    visibility = ["//:__subpackages__"],
    deps = [
        "//internal/congestion:go_default_library",
        "//internal/protocol:go_default_library",
        "//internal/qerr:go_default_library",
        "//internal/utils:go_default_library",
        "//internal/wire:go_default_library",
        "//logging:go_default_library",
    ],
)

go_test(
    name = "go_default_test",
    srcs = [
        "ack_eliciting_test.go",
        "ackhandler_suite_test.go",
        "mock_sent_packet_tracker_test.go",
        "packet_number_generator_test.go",
        "received_packet_handler_test.go",
        "received_packet_history_test.go",
        "received_packet_tracker_test.go",
        "send_mode_test.go",
        "sent_packet_handler_test.go",
        "sent_packet_history_test.go",
    ],
    embed = [":go_default_library"],
    deps = [
        "//internal/mocks:go_default_library",
        "//internal/protocol:go_default_library",
        "//internal/qerr:go_default_library",
        "//internal/utils:go_default_library",
        "//internal/wire:go_default_library",
        "@com_github_golang_mock//gomock:go_default_library",
        "@com_github_onsi_ginkgo//:go_default_library",
        "@com_github_onsi_gomega//:go_default_library",
    ],
)
