load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = [
        "base_flow_controller.go",
        "connection_flow_controller.go",
        "interface.go",
        "stream_flow_controller.go",
    ],
    importpath = "github.com/lucas-clemente/quic-go/internal/flowcontrol",
    visibility = ["//:__subpackages__"],
    deps = [
        "//internal/protocol:go_default_library",
        "//internal/qerr:go_default_library",
        "//internal/utils:go_default_library",
    ],
)

go_test(
    name = "go_default_test",
    srcs = [
        "base_flow_controller_test.go",
        "connection_flow_controller_test.go",
        "flowcontrol_suite_test.go",
        "stream_flow_controller_test.go",
    ],
    embed = [":go_default_library"],
    deps = [
        "//internal/protocol:go_default_library",
        "//internal/qerr:go_default_library",
        "//internal/utils:go_default_library",
        "@com_github_golang_mock//gomock:go_default_library",
        "@com_github_onsi_ginkgo//:go_default_library",
        "@com_github_onsi_gomega//:go_default_library",
    ],
)
