load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = [
        "aead.go",
        "crypto_setup.go",
        "header_protector.go",
        "hkdf.go",
        "initial_aead.go",
        "interface.go",
        "mockgen.go",
        "retry.go",
        "session_ticket.go",
        "tls_extension_handler.go",
        "token_generator.go",
        "token_protector.go",
        "updatable_aead.go",
    ],
    importpath = "github.com/lucas-clemente/quic-go/internal/handshake",
    visibility = ["//:__subpackages__"],
    deps = [
        "//internal/protocol:go_default_library",
        "//internal/qerr:go_default_library",
        "//internal/qtls:go_default_library",
        "//internal/utils:go_default_library",
        "//internal/wire:go_default_library",
        "//logging:go_default_library",
        "//quicvarint:go_default_library",
        "@org_golang_x_crypto//chacha20:go_default_library",
        "@org_golang_x_crypto//hkdf:go_default_library",
    ],
)

go_test(
    name = "go_default_test",
    srcs = [
        "aead_test.go",
        "crypto_setup_test.go",
        "handshake_suite_test.go",
        "hkdf_test.go",
        "initial_aead_test.go",
        "mock_handshake_runner_test.go",
        "retry_test.go",
        "session_ticket_test.go",
        "tls_extension_handler_test.go",
        "token_generator_test.go",
        "token_protector_test.go",
        "updatable_aead_test.go",
    ],
    embed = [":go_default_library"],
    deps = [
        "//internal/mocks/logging:go_default_library",
        "//internal/mocks/tls:go_default_library",
        "//internal/protocol:go_default_library",
        "//internal/qerr:go_default_library",
        "//internal/qtls:go_default_library",
        "//internal/testdata:go_default_library",
        "//internal/utils:go_default_library",
        "//internal/wire:go_default_library",
        "//quicvarint:go_default_library",
        "@com_github_golang_mock//gomock:go_default_library",
        "@com_github_onsi_ginkgo//:go_default_library",
        "@com_github_onsi_gomega//:go_default_library",
    ],
)
