load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = ["cert.go"],
    importpath = "github.com/lucas-clemente/quic-go/internal/testdata",
    visibility = ["//:__subpackages__"],
)

go_test(
    name = "go_default_test",
    srcs = [
        "cert_test.go",
        "testdata_suite_test.go",
    ],
    embed = [":go_default_library"],
    deps = [
        "@com_github_onsi_ginkgo//:go_default_library",
        "@com_github_onsi_gomega//:go_default_library",
    ],
)
