load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = [
        "ack_frame.go",
        "ack_range.go",
        "connection_close_frame.go",
        "crypto_frame.go",
        "data_blocked_frame.go",
        "datagram_frame.go",
        "extended_header.go",
        "frame_parser.go",
        "handshake_done_frame.go",
        "header.go",
        "interface.go",
        "log.go",
        "max_data_frame.go",
        "max_stream_data_frame.go",
        "max_streams_frame.go",
        "new_connection_id_frame.go",
        "new_token_frame.go",
        "path_challenge_frame.go",
        "path_response_frame.go",
        "ping_frame.go",
        "pool.go",
        "reset_stream_frame.go",
        "retire_connection_id_frame.go",
        "stop_sending_frame.go",
        "stream_data_blocked_frame.go",
        "stream_frame.go",
        "streams_blocked_frame.go",
        "transport_parameters.go",
        "version_negotiation.go",
    ],
    importpath = "github.com/lucas-clemente/quic-go/internal/wire",
    visibility = ["//:__subpackages__"],
    deps = [
        "//internal/protocol:go_default_library",
        "//internal/qerr:go_default_library",
        "//internal/utils:go_default_library",
        "//quicvarint:go_default_library",
    ],
)

go_test(
    name = "go_default_test",
    srcs = [
        "ack_frame_test.go",
        "ack_range_test.go",
        "connection_close_frame_test.go",
        "crypto_frame_test.go",
        "data_blocked_frame_test.go",
        "datagram_frame_test.go",
        "extended_header_test.go",
        "frame_parser_test.go",
        "header_test.go",
        "log_test.go",
        "max_data_frame_test.go",
        "max_stream_data_frame_test.go",
        "max_streams_frame_test.go",
        "new_connection_id_frame_test.go",
        "new_token_frame_test.go",
        "path_challenge_frame_test.go",
        "path_response_frame_test.go",
        "ping_frame_test.go",
        "pool_test.go",
        "reset_stream_frame_test.go",
        "retire_connection_id_frame_test.go",
        "stop_sending_frame_test.go",
        "stream_data_blocked_frame_test.go",
        "stream_frame_test.go",
        "streams_blocked_frame_test.go",
        "transport_parameter_test.go",
        "version_negotiation_test.go",
        "wire_suite_test.go",
    ],
    embed = [":go_default_library"],
    deps = [
        "//internal/protocol:go_default_library",
        "//internal/qerr:go_default_library",
        "//internal/utils:go_default_library",
        "//quicvarint:go_default_library",
        "@com_github_onsi_ginkgo//:go_default_library",
        "@com_github_onsi_gomega//:go_default_library",
    ],
)
