load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = [
        "client.go",
        "server.go",
    ],
    importpath = "github.com/lucas-clemente/quic-go/interop/http09",
    visibility = ["//visibility:public"],
    deps = [
        "//:go_default_library",
        "@org_golang_x_net//idna:go_default_library",
    ],
)

go_test(
    name = "go_default_test",
    srcs = [
        "http09_suite_test.go",
        "http_test.go",
    ],
    embed = [":go_default_library"],
    deps = [
        "//:go_default_library",
        "//internal/testdata:go_default_library",
        "@com_github_onsi_ginkgo//:go_default_library",
        "@com_github_onsi_gomega//:go_default_library",
    ],
)
