load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["main.go"],
    importpath = "github.com/lucas-clemente/quic-go/interop/server",
    visibility = ["//visibility:private"],
    deps = [
        "//:go_default_library",
        "//http3:go_default_library",
        "//interop/http09:go_default_library",
        "//interop/utils:go_default_library",
        "//qlog:go_default_library",
    ],
)

go_binary(
    name = "server",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)
