load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["logging.go"],
    importpath = "github.com/lucas-clemente/quic-go/interop/utils",
    visibility = ["//visibility:public"],
    deps = [
        "//internal/utils:go_default_library",
        "//logging:go_default_library",
    ],
)
